<resources>
    <string name="app_name">MAD</string>
    <string name="user_full_name">User Full Name :</string>
    <string name="enter_name">Enter Name</string>
    <string name="phone_number">Phone Number :</string>
    <string name="enter_number">Enter Number</string>
    <string name="city">City :</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="do_you_have_any_account">Do you have any account?</string>
    <string name="enter_password_again">Enter Password Again</string>
    <string name="confirm_npassword">Confirm\nPassword :</string>
    <string name="enter_passsword">Enter Passsword</string>
    <string name="password">Password :</string>
    <string name="enter_mail">Enter Mail</string>
    <string name="email">Email :</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email :</string>
    <string name="email_id">Email Id :</string>
    <string name="forgot_password">Forgot Password?</string>

</resources>