<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/guni_pink_logo" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:cardElevation="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            >

            <TextView
                android:id="@+id/text_view_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/reg_top_margin"
                android:textSize="@dimen/text_size"
                app:layout_constraintEnd_toStartOf="@+id/editText1"
                android:text="@string/user_full_name"
                app:layout_constraintHorizontal_weight="0.8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="1"
                android:ems="10"
                android:minHeight="48dp"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/text_view_name"
                app:layout_constraintStart_toEndOf="@+id/text_view_name"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/enter_name"/>

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/reg_top_margin"
                android:textSize="@dimen/text_size"
                app:layout_constraintHorizontal_weight="0.8"
                app:layout_constraintEnd_toStartOf="@+id/editText2"
                android:text="@string/phone_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_name" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:minHeight="48dp"
                android:padding="8dp"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/phone_number"
                app:layout_constraintStart_toEndOf="@+id/phone_number"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/enter_number"/>

            <TextView
                android:id="@+id/city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/reg_top_margin"
                app:layout_constraintEnd_toStartOf="@+id/editText3"
                app:layout_constraintHorizontal_weight="0.8"
                android:textSize="18sp"
                android:text="@string/city"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_number" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:ems="10"
                android:minHeight="48dp"
                android:padding="8dp"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintBaseline_toBaselineOf="@+id/city"
                app:layout_constraintStart_toEndOf="@+id/city"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/enter_city"/>

            <TextView
                android:id="@+id/email_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/reg_top_margin"
                app:layout_constraintHorizontal_weight="0.8"
                app:layout_constraintEnd_toStartOf="@+id/editText4"
                android:textSize="18sp"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/city" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="1"
                android:ems="10"
                android:minHeight="48dp"
                android:padding="8dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/email_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/email_id"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/enter_mail"/>

            <TextView
                android:id="@+id/text_view_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:layout_constraintHorizontal_weight="0.8"
                app:layout_constraintEnd_toStartOf="@+id/editText5"
                android:layout_marginTop="@dimen/reg_top_margin"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_id" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintBaseline_toBaselineOf="@id/text_view_password"
                app:layout_constraintEnd_toEndOf="parent"
                android:ems="10"
                android:minHeight="48dp"
                android:padding="8dp"
                app:layout_constraintStart_toEndOf="@+id/text_view_password"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/enter_passsword"/>

            <TextView
                android:id="@+id/text_view_confirm_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/reg_top_margin"
                android:textSize="18sp"
                app:layout_constraintHorizontal_weight="0.8"
                app:layout_constraintEnd_toStartOf="@+id/editText6"
                android:text="@string/confirm_npassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_password" />

            <EditText
                android:id="@+id/editText6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintBaseline_toBaselineOf="@+id/text_view_confirm_password"
                app:layout_constraintEnd_toEndOf="parent"
                android:ems="10"
                android:minHeight="48dp"
                android:padding="8dp"
                app:layout_constraintStart_toEndOf="@+id/text_view_confirm_password"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/enter_password_again"/>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/doyou"
        android:layout_width="220dp"
        android:layout_height="29dp"
        android:layout_marginTop="48dp"
        android:text="@string/do_you_have_any_account"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_register" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintBaseline_toBaselineOf="@+id/doyou"
        app:layout_constraintStart_toEndOf="@+id/doyou"
        android:background="@color/transparent"
        android:textSize="@dimen/text_size"
        android:textColor="@color/red"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/register_constraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="-25dp"
        app:layout_constraintTop_toBottomOf="@+id/card_register"
        >
    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="50dp"
        android:textSize="@dimen/text_size"
        android:text="@string/register" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>