<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/guni_pink_logo" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="20dp"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <TextView
                android:id="@+id/text_view_email_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:layout_marginTop="@dimen/reg_top_margin"
                android:text="@string/email_id"
                app:layout_constraintEnd_toStartOf="@id/editText1"
                app:layout_constraintHorizontal_weight="0.8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:minHeight="48dp"
                android:ems="10"
                app:layout_constraintBaseline_toBaselineOf="@id/text_view_email_id"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_view_email_id"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/reg_top_margin"
                android:textSize="@dimen/text_size"
                app:layout_constraintHorizontal_weight="0.8"
                android:text="@string/password"
                app:layout_constraintEnd_toStartOf="@id/loginpassword1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_email_id"
                />

            <EditText
                android:id="@+id/loginpassword1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/enter_password"
                android:minHeight="48dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/text_view_password"
                app:layout_constraintStart_toEndOf="@+id/text_view_password"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_forgot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/reg_top_margin"
                android:text="@string/forgot_password"
                android:textSize="@dimen/text_size"
                app:layout_constraintBottom_toTopOf="@+id/login_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_password" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="35dp"
                android:textSize="@dimen/text_size"
                app:layout_constraintTop_toTopOf="@+id/text_view_forgot"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>